corrected hero spacing

--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,15 @@ body {
     font-size: 72px;
     font-weight: bold;
     color: #333333;
+    height: 72px;
 }
 
-.divider.short {
-    height: 2px;
+
+#hero .divider.short {
+	height: 2px;
     width: 100px;
-    background-color: rgb(240, 240, 240);
-    margin: 15px 0px;
+    background-color: rgb(235, 235, 235);
+    margin: 30px 0px;
 }
 
 
@@ -103,6 +105,13 @@ body {
     background: #4A90E2;
     color: white;
     font-weight: normal;
+}
+
+#work .divider.short {
+	height: 2px;
+    width: 100px;
+    background-color: rgb(235, 235, 235);
+    margin: 15px 0px;
 }
 
 #work .project span {
